Several bug fixes
Row blog - comment out category dropdown
Row blog - header does not work on mobile
Row blog - Add the tagline beneath the logo
Row blog - Reveal "I AM searching now" only on hover action
Row blog - add a bit of white space between "Stay connected hashtag us!"
and #MoreNYthanNY
Row blog - Change date font weight to regular - not bold
Row blog - pull featured image into the post single page
Row blog - Connect #morenythanny hash to instagram feed

--- a/wp-content/themes/row/bloginfo/css/media.css
+++ b/wp-content/themes/row/bloginfo/css/media.css
@@ -1,9 +1,118 @@
+/* ================================================ 768 ======================================= */
+
+@media only screen 
+and (max-width : 900px) {
+
+
+
+	/* Blog Header */
+
+	.logo {
+	    display: block;
+	    height: 96px;
+	    margin: 20px auto 0;
+	    position: relative;
+	    text-align: center;
+	    top: 0;
+	}
+
+
+
+}
+
+
+
+/* ================================================ MAX WIDTH 640 ======================================= */
+
+@media only screen 
+and (max-width : 640px) {
+
+
+
+	/* Blog Header */
+
+	.topsect {
+	    height: auto;
+	    min-height: 340px;
+	    overflow: hidden;
+	    position: relative;
+	}
+
+	.logo {
+	    display: block;
+	    margin: 20px auto 0;
+	    position: relative;
+	    top: 0;
+	}
+
+	.rightsort {
+	    clear: both;
+	    position: relative;
+	    right: auto;
+	    top: 0;
+	}
+
+	.rightsort form {
+	    clear: both;
+	    float: none;
+	    margin: 15px auto;
+	    opacity: 1;
+	    padding-right: 15px;
+	    position: absolute;
+	    visibility: visible;
+	    width: 200px;
+	}
+
+
+	.rightsort form input {
+	    opacity: 1;
+	    visibility: visible;
+	}
+
+	.rightsort .sosocial {
+	    clear: both;
+	    float: none;
+	    margin: 0 auto;
+	    padding: 1px 0 0;
+	    width: 175px;
+	}
+
+	.reservations {
+	    margin: 10px auto 0;
+	    padding-left: 20px;
+	    position: relative;
+	    right: 0;
+	    top: 20px;
+	}
+
+
+
+}
+
+
+
 /* ================================================  MOBILES BELOW 399 ======================================= */
 
 
 @media only screen 
 and (max-width : 399px) 
 {	
+
+
+
+	/* Header */
+
+	.reservationform select {
+		padding: 5px 7px 5px 8px;
+	}
+
+	.reservationform span.shortercal {
+		height: 39px;
+	}
+
+	.reservationform .button {
+		margin: 6px 14px 0 0;
+	}
 
 
 
